--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,3 +18,31 @@ table a {
 .cursor-pointer {
 	cursor: pointer;
 }
+
+.overlay-wrapper > .overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%
+}
+
+.overlay-wrapper .overlay {
+	z-index: 50;
+	background: rgba(255, 255, 255, 0.7);
+	border-radius: 3px
+}
+
+.overlay-wrapper .overlay > .fa {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-left: -15px;
+	margin-top: -15px;
+	color: #000;
+	font-size: 30px
+}
+
+.data-table {
+	position: relative;
+}
