--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,10 @@
+.nav-header .brand-logo b img.logo-image {
+	background-color: #9067be;
+	border-radius: 5px;
+	padding: 5px 6px;
+	margin-top: 0;
+}
+
 table.table td {
 	line-height: normal;
 }
